@@ -1,5 +1,6 @@
 == master
 
+* Add support for MassAssignmentSecurity feature in ActiveModel integrations
 * Add support for more observer hooks within MongoMapper integrations
 * Add i18n support for MongoMapper validation errors
 * Update support for MongoMapper integration based on rails3 branch
